 - Starting support for C++20 `std::span`.
 - New `blob::read()` using `std::span`.  (#429)
 - New `params` class lets you build parameter lists incrementally.  (#387)
 - Pass `std::vector<std::byte>` params in binary format.
 - Dropped legacy tests 31 and 49 to work around clang C++20 bug.
 - Fixed `stream_to` test failure in non-English locales.  (#440)
7.4.1
 - Missing includes; broke macOS clang build.  (#416)
7.4.0
 - Work around Visual Studio 2017 bug with `[[deprecated]]`.  (#405, #406)
 - Work around eternal Windows bug with `max` macro yet again.  (#101)
 - Prepare for C++20 `std::ssize()`.
 - Dropped test12, which didn't add much and tried to read null strings.
 - Support string conversion for `std::monostate`.  (#409)
 - Consistent "named constructors" for `stream_to` and `stream_from`.
 - New `table_path` type.
 - New `connection` methods `quote_table` and `quote_columns`.
 - Lots of deprecated stream constructors.
 - `pqxx::row::swap()` now finally has the `deprecated` attribute.
 - Finally deprecated a bunch of `field`, `row`, and `result` constructors.
 - Exposed `transaction_focus` marker class.
7.3.1
 - New, simpler API for large objects: `blob` ("binary large object").
 - `largeobject` and friends are now deprecated.
 - Fix visibility issue on gcc/clang, especially on macOS.  (#395)
 - Use "pure" & "visibility" attributes if they work, regardless of compiler.
 - More deprecated items now have the `[[deprecated]]` attribute.
 - Document the concept of transaction focus.
 - Error messages more often report query description, if given.
 - Suppress spurious deprecation messages on Visual Studio. (#402)
 - Correct error when prepared/param statement clashes with tx focus. (#401)
 - `from_stream` with `from_query` now has a convenient factory function.
 - Removed some obsolete scripts from the `tools/` directory.
7.3.0
 - `stream_to` now quotes and escapes its table name.
 - Removed `transaction_base::classname()`.  Did anyone ever use it?