@@ -9,6 +9,7 @@
  - Pass `std::vector<std::byte>` params in binary format.
  - Dropped legacy tests 31 and 49 to work around clang C++20 bug.
  - Fixed `stream_to` test failure in non-English locales.  (#440)
+ - Clarify `transaction_base::stream` documentation.  (#423)
 7.4.1
  - Missing includes; broke macOS clang build.  (#416)
 7.4.0
